--- a/www/templates/chat-detail.html
+++ b/www/templates/chat-detail.html
@@ -6,9 +6,81 @@
 -->
 <ion-view view-title="{{chat.name}}">
   <ion-content class="padding">
-    <img ng-src="{{chat.face}}" style="width: 64px; height: 64px">
-    <p>
-      {{chat.lastText}}
-    </p>
+	<div class="card">
+	  <div class="item item-divider">
+		Información del Reporte
+	  </div>
+	  <div class="item item-text-wrap">
+		<div class="list">
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Empresa</span>
+			<input type="text" placeholder="ANTAMINA">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Base</span>
+			<input type="text" placeholder="CONTROL CASABLANCA">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Informe N°</span>
+			<input type="text" placeholder="2018 06 01 SVC 002">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Fecha del Evento</span>
+			<input type="text" placeholder="01/06/2018">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Reportante</span>
+			<input type="text" placeholder="PENAGOS VASQUEZ PEDRO">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Hora del Evento</span>
+			<input type="text" placeholder="13:50">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Lugar de Ocurrencia</span>
+			<input type="text" placeholder="PUESTO CONTROL CASABLANCA">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Kilómetro</span>
+			<input type="text" placeholder="9">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Actividad</span>
+			<input type="text" placeholder="TRANSITO BAJADA VACIO">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Tipo de Unidad</span>
+			<input type="text" placeholder="CAMION GRUA">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Operador de Contrato</span>
+			<input type="text" placeholder="Edgar Portocarrero">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Tipo de Observación</span>
+			<input type="text" placeholder="UNIDAD">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Tipo de Criticidad</span>
+			<input type="text" placeholder="NC-21 Conducir un vehículo que no cuente con certificado">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Gerencia</span>
+			<input type="text" placeholder="MANTENIMIENTO">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Nombre del Conductor</span>
+			<input type="text" placeholder="Incio Rojas Pedro">
+		  </label>
+		  <label class="item item-input item-stacked-label">
+			<span class="input-label">Estado</span>
+			<input type="text" placeholder="Pendiente">
+		  </label>
+		</div>
+	  </div>
+	</div>
+	<button class="button button-full button-positive">
+	  Guardar
+	</button>
   </ion-content>
 </ion-view>
