--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,5 +1,11 @@
-<ion-view view-title="Chats">
+<ion-view view-title="Reportes">
   <ion-content>
+	<div class="list list-inset">
+	  <label class="item item-input">
+		<i class="icon ion-search placeholder-icon"></i>
+		<input type="text" placeholder="Buscar">
+	  </label>
+	</div>
     <ion-list>
       <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
         <img ng-src="{{chat.face}}">
