--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -14,7 +14,7 @@
         <i class="icon ion-chevron-right icon-accessory"></i>
 
         <ion-option-button class="button-assertive" ng-click="remove(chat)">
-          Delete
+          Borrar
         </ion-option-button>
       </ion-item>
     </ion-list>
