--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -1,17 +1,37 @@
-<ion-view view-title="Dashboard">
-  <ion-content class="padding">
-    <h2>Welcome to Ionic</h2>
-    <p>
-    This is the Ionic starter for tabs-based apps. For other starters and ready-made templates, check out the <a href="http://market.ionic.io/starters" target="_blank">Ionic Market</a>.
-    </p>
-    <p>
-      To edit the content of each tab, edit the corresponding template file in <code>www/templates/</code>. This template is <code>www/templates/tab-dash.html</code>
-    </p>
-    <p>
-    If you need help with your app, join the Ionic Community on the <a href="http://forum.ionicframework.com" target="_blank">Ionic Forum</a>. Make sure to <a href="http://twitter.com/ionicframework" target="_blank">follow us</a> on Twitter to get important updates and announcements for Ionic developers.
-    </p>
-    <p>
-      <b>Psst!</b> - Try <a href="http://view.ionic.io/">Ionic View</a> to easily share and test your app with clients and co-workers.
-    </p>
-  </ion-content>
+<ion-view view-title="Perfil">
+	<ion-content>
+	<div class="card">
+	  <div class="item item-divider">
+		Bienvenido a la APP Safety GIS
+	  </div>
+	  <div class="item item-text-wrap">
+		¡Bienvenido Frank!
+	  </div>
+	</div>
+	<div class="card">
+	  <div class="item item-divider">
+		Información de Perfil
+	  </div>
+	  <div class="item item-text-wrap">
+		<div class="list">
+
+		  <a class="item item-icon-left" href="#">
+			<i class="icon ion-email"></i>
+			frank.altamirano@gmail.com
+		  </a>
+
+		  <a class="item item-icon-left" href="#">
+			<i class="icon ion-ios-telephone-outline"></i>
+			984 234 658
+		  </a>
+		  <a class="item item-icon-left" href="#">
+			<i class="icon ion-person-stalker"></i>
+			Empresa ANTAMINA
+			<span class="badge badge-assertive">10</span>
+		  </a>
+
+		</div>
+	  </div>
+	</div>
+	</ion-content>
 </ion-view>
