--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,3 +2,11 @@
 .input-label {
 	width: 100% !important;
 }
+map {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+.scroll {
+  height: 100%;
+}
