--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -1,22 +1,13 @@
-<ion-view view-title="Login" hide-nav-bar="true">
+<ion-view view-title="Login">
     <ion-content>
 		<div class="text-center">
 			<label class="text-center">
 				<img src="img/logo.gif">
 			</label>
 		</div>
+			asdasdasdas
         <form class="list">
-            <ion-list>
-                <label class="item item-input" name="user_user">
-                    <span class="input-label">Usuario</span>
-                    
-                </label>
-                <label class="item item-input" name="user_password">
-                    <span class="input-label">Contraseña</span>
-                    
-                </label>
-            </ion-list>
-            <a id="perfil-button4" class="button button-stable  button-block" ng-click="doLogin()">Iniciar Sesión</a>			
+            
         </form>	
     </ion-content>
 </ion-view>
