--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -7,9 +7,9 @@
 	  </label>
 	</div>
     <ion-list>
-      <ion-item class="item-remove-animate item-avatar item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
-        <img ng-src="{{chat.face}}">
-        <h2>{{chat.correlative}}</h2>
+      <ion-item class="item-remove-animate item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+        <!--<img ng-src="{{chat.face}}">-->
+        <h2><b>{{chat.business_name}}</b> {{chat.correlative}}</h2>
         <p>{{chat.status}} - {{chat.criticity}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
