--- a/www/templates/tab-route-detail.html
+++ b/www/templates/tab-route-detail.html
@@ -5,5 +5,7 @@
 
     <ion-footer-bar class="bar-stable">
       <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate"></a>
+	  <button class="button button-icon button-clear ion-navicon" ng-click="showRightMenu()">
+       </button>
     </ion-footer-bar>
 </ion-view>
