--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -7,9 +7,9 @@
         <p>{{route.archive}}</p>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
-        <ion-option-button class="button-assertive" ng-click="remove(route)">
+        <!--<ion-option-button class="button-assertive" ng-click="remove(route)">
           Borrar
-        </ion-option-button>
+        </ion-option-button>-->
       </ion-item>
     </ion-list>
   </ion-content>
