--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -17,7 +17,7 @@
                 </label>
             </ion-list>
 			<p ng-show="local.elogin" style="color:red;font-weight:bold;text-align:center;margin-top:10px;">Error al iniciar sesión</p>
-            <a id="perfil-button4" class="button button-stable  button-block" ng-click="doLogin()">Iniciar Sesión</a>			
+            <a id="perfil-button4" class="button button-positive  button-block" ng-click="doLogin()">Iniciar Sesión</a>			
         </form>	
     </ion-content>
 </ion-view>
