--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -3,11 +3,11 @@
 	<div class="list list-inset">
 	  <label class="item item-input">
 		<i class="icon ion-search placeholder-icon"></i>
-		<input type="text" placeholder="Buscar">
+		<input type="text" placeholder="Buscar" ng-model="search">
 	  </label>
 	</div>
     <ion-list>
-      <ion-item class="item-remove-animate item-icon-right" ng-repeat="chat in chats" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
+      <ion-item class="item-remove-animate item-icon-right" ng-repeat="chat in chats | filter:search" type="item-text-wrap" href="#/tab/chats/{{chat.id}}">
         <!--<img ng-src="{{chat.face}}">-->
         <h2><b>{{chat.business_name}}</b> {{chat.correlative}}</h2>
         <p>{{chat.status}} - {{chat.criticity}}</p>
