--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -25,9 +25,13 @@
 			Empresa <b>{{local.business_name}}</b>
 			<span class="badge badge-assertive" ng-show="local.report_count > -1">{{local.report_count}}</span>
 		  </a>
-
 		</div>
 	  </div>
+	</div>
+	<div>
+		<button class="button button-full button-assertive" ng-click="doLogout()">
+		  Cerrar Sesión
+		</button>
 	</div>
 	</ion-content>
 </ion-view>
