add report y mas

--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,4 +1,6 @@
 <ion-view view-title="Reportes">
+  <ion-floating-button click="newReport()" has-footer="true" button-color="#2AC9AA" icon="ion-plus" icon-color="#fff">
+  </ion-floating-button>
   <ion-content>
 	<div class="list list-inset">
 	  <label class="item item-input">
