--- a/www/templates/tab-chats.html
+++ b/www/templates/tab-chats.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Reportes">
+<ion-view hide-back-button="true" view-title="Reportes">
   <ion-floating-button click="newReport()" has-footer="true" button-color="#2AC9AA" icon="ion-plus" icon-color="#fff">
   </ion-floating-button>
   <ion-content>
