--- a/www/templates/chat-new.html
+++ b/www/templates/chat-new.html
@@ -99,13 +99,13 @@
 			<textarea ng-model="report.reference"></textarea>
 		  </label>
 		  <label class="item item-input">
-			<span class="input-label">Place de Unidad</span>
+			<span class="input-label">Placa de Unidad</span>
 			<textarea ng-model="report.vehicle_plate"></textarea>
 		  </label>
 		</div>
 	  </div>
 	</div>
-	<button class="button button-full button-positive">
+	<button class="button button-full button-positive" ng-click="createReport()">
 	  Guardar
 	</button>
   </ion-content>
